[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/FossilBattle/BattleSprite/BattleSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/FossilBattle/BattleTeam/BattleTeamScn.gd" type="Script" id=2]
[ext_resource path="res://Scenes/FossilBattle/BattleTeam/StatModInd.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Battle/indicators/swap_arrow_straight.png" type="Texture" id=4]
[ext_resource path="res://Assets/Battle/indicators/swap_arrow_curve.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/SwapIndicators/SwapArrowCurve:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/SwapIndicators/SwapArrowStraight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -70, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/SwapIndicators:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "SwapOut"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/SwapIndicators/SwapArrowCurve:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/SwapIndicators/SwapArrowStraight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -65, 0 ), Vector2( -70, 0 ), Vector2( -75, 0 ), Vector2( -70, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/SwapIndicators:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="BattleTeam" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/SwapOut = SubResource( 2 )

[node name="Sprites" type="Node2D" parent="."]

[node name="AZ" parent="Sprites" instance=ExtResource( 1 )]

[node name="SZ1" parent="Sprites" instance=ExtResource( 1 )]
position = Vector2( -50, -60 )

[node name="SZ2" parent="Sprites" instance=ExtResource( 1 )]
position = Vector2( -50, 60 )

[node name="SwapIndicators" type="Node2D" parent="Sprites"]
visible = false

[node name="SwapArrowStraight" type="Sprite" parent="Sprites/SwapIndicators"]
position = Vector2( -70, 0 )
texture = ExtResource( 4 )

[node name="SwapArrowCurve" type="Sprite" parent="Sprites/SwapIndicators"]
position = Vector2( 0, 50 )
texture = ExtResource( 5 )

[node name="AZ_Mods" parent="Sprites" instance=ExtResource( 3 )]
position = Vector2( 40, -95 )
